kanban/kanban-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: kanban-ui
    group: frontend
  name: kanban-ui
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  selector:
    app: kanban-ui
  type: LoadBalancer
