kanban/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: default
  name: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /ui
        backend:
          serviceName: kanban-ui
          servicePort: 80
  - http:
      paths:
      - path: /app
        backend:
          serviceName: kanban-app
          servicePort: 8080
